Fixed bulk mailing + added Package.json

--- a/client/index.html
+++ b/client/index.html
@@ -142,15 +142,15 @@
 				<form name="hongkiat" id="hongkiat-form" method="post">
 					<div id="wrapping" class="clearfix">
 						<section id="aligned">
-							<input type="text" name="name" id="name" placeholder="Publié par.. (traçabilité)" autocomplete="off" tabindex="1" class="txtinput">
+							<input required type="text" name="name" id="name" placeholder="Publié par.. (traçabilité)" autocomplete="off" tabindex="1" class="txtinput">
 
-							<input type="text" name="email" id="email" placeholder="Titre de l'article" autocomplete="off" tabindex="2" class="txtinput nl-title">
+							<input required type="text" name="email" id="email" placeholder="Titre de l'article" autocomplete="off" tabindex="2" class="txtinput nl-title">
 
-							<input type="url" name="link" id="website" placeholder="URL de l'article" autocomplete="off" tabindex="3" class="txtinput nl-url">
+							<input required type="url" name="link" id="website" placeholder="URL de l'article" autocomplete="off" tabindex="3" class="txtinput nl-url">
 
 							<label>Couverture de l'article</label>
 
-							<input class="file-trigger" type="file" name="image"  placeholder="Couverture de l'article" tabindex="4" class="txtinput">
+							<input required class="file-trigger" type="file" name="image"  placeholder="Couverture de l'article" tabindex="4" class="txtinput">
 
 							<img style="display:none;" class="nl-image-preview" />
 
@@ -171,17 +171,17 @@
 							<section id="prioritycase">
 								<h3>Priorité:</h3>
 								<span class="radiobadge">
-									<input type="radio" id="low" name="priority" value="Basse">
+									<input required type="radio" id="low" name="priority" value="Basse">
 									<label for="low">Basse</label>
 								</span>
 
 								<span class="radiobadge">
-									<input type="radio" id="med" name="priority" value="Moyenne" checked="checked">
+									<input required type="radio" id="med" name="priority" value="Moyenne" checked="checked">
 									<label for="med">Moyenne</label>
 								</span>
 
 								<span class="radiobadge">
-									<input type="radio" id="high" name="priority" value="Haute">
+									<input required type="radio" id="high" name="priority" value="Haute">
 									<label for="high">Haute</label>
 								</span>
 							</section>
@@ -190,8 +190,8 @@
 
 
 					<section id="buttons">
-						<input type="reset" name="reset" id="resetbtn" class="resetbtn" value="Remettre à Zéro">
-						<input type="submit" name="submit" id="submitbtn" class="submitbtn" tabindex="7" value="Envoyer tous les articles">
+						<input required type="reset" name="reset" id="resetbtn" class="resetbtn" value="Remettre à Zéro">
+						<input required type="submit" name="submit" id="submitbtn" class="submitbtn" tabindex="7" value="Envoyer tous les articles">
 						<br style="clear:both;">
 					</section>
 				</form>
@@ -202,15 +202,15 @@
 				<form name="hongkiat" id="hongkiat-form" method="post">
 					<div id="wrapping" class="clearfix">
 						<section id="aligned">
-							<input type="text" name="name" id="name" placeholder="Publié par.. (traçabilité)" autocomplete="off" tabindex="1" class="txtinput">
+							<input required type="text" name="name" id="name" placeholder="Publié par.. (traçabilité)" autocomplete="off" tabindex="1" class="txtinput">
 
-							<input type="text" name="email" id="email" placeholder="Titre de l'article" autocomplete="off" tabindex="2" class="txtinput nl-title">
+							<input required type="text" name="email" id="email" placeholder="Titre de l'article" autocomplete="off" tabindex="2" class="txtinput nl-title">
 
-							<input type="url" name="link" id="website" placeholder="URL de l'article" autocomplete="off" tabindex="3" class="txtinput nl-url">
+							<input required type="url" name="link" id="website" placeholder="URL de l'article" autocomplete="off" tabindex="3" class="txtinput nl-url">
 
 							<label>Couverture de l'article</label>
 
-							<input type="file" name="image" placeholder="Couverture de l'article" tabindex="4" class="txtinput file-trigger">
+							<input required type="file" name="image" placeholder="Couverture de l'article" tabindex="4" class="txtinput file-trigger">
 
 							<img style="display:none;" class="nl-image-preview" />
 
@@ -231,17 +231,17 @@
 							<section id="prioritycase">
 								<h3>Priorité:</h3>
 								<span class="radiobadge">
-									<input type="radio" id="low" name="priority" value="Basse">
+									<input required type="radio" id="low" name="priority" value="Basse">
 									<label for="low">Basse</label>
 								</span>
 
 								<span class="radiobadge">
-									<input type="radio" id="med" name="priority" value="Moyenne" checked="checked">
+									<input required type="radio" id="med" name="priority" value="Moyenne" checked="checked">
 									<label for="med">Moyenne</label>
 								</span>
 
 								<span class="radiobadge">
-									<input type="radio" id="high" name="priority" value="Haute">
+									<input required type="radio" id="high" name="priority" value="Haute">
 									<label for="high">Haute</label>
 								</span>
 							</section>
@@ -250,8 +250,8 @@
 
 
 					<section id="buttons">
-						<input type="reset" name="reset" id="resetbtn" class="resetbtn" value="Remettre à Zéro">
-						<input type="submit" name="submit" id="submitbtn" class="submitbtn" tabindex="7" value="Envoyer tous les articles">
+						<input required type="reset" name="reset" id="resetbtn" class="resetbtn" value="Remettre à Zéro">
+						<input required type="submit" name="submit" id="submitbtn" class="submitbtn" tabindex="7" value="Envoyer tous les articles">
 						<br style="clear:both;">
 					</section>
 				</form>
@@ -262,15 +262,15 @@
 				<form name="hongkiat" id="hongkiat-form" method="post">
 					<div id="wrapping" class="clearfix">
 						<section id="aligned">
-							<input type="text" name="name" id="name" placeholder="Publié par.. (traçabilité)" autocomplete="off" tabindex="1" class="txtinput">
+							<input required type="text" name="name" id="name" placeholder="Publié par.. (traçabilité)" autocomplete="off" tabindex="1" class="txtinput">
 
-							<input type="text" name="email" id="email" placeholder="Titre de l'article" autocomplete="off" tabindex="2" class="txtinput nl-title">
+							<input required type="text" name="email" id="email" placeholder="Titre de l'article" autocomplete="off" tabindex="2" class="txtinput nl-title">
 
-							<input type="url" name="link" id="website" placeholder="URL de l'article" autocomplete="off" tabindex="3" class="txtinput nl-url">
+							<input required type="url" name="link" id="website" placeholder="URL de l'article" autocomplete="off" tabindex="3" class="txtinput nl-url">
 
 							<label>Couverture de l'article</label>
 
-							<input   type="file" name="image" placeholder="Couverture de l'article" tabindex="4" class="txtinput file-trigger">
+							<input required   type="file" name="image" placeholder="Couverture de l'article" tabindex="4" class="txtinput file-trigger">
 
 							<img style="display:none;" class="nl-image-preview" />
 
@@ -291,17 +291,17 @@
 							<section id="prioritycase">
 								<h3>Priorité:</h3>
 								<span class="radiobadge">
-									<input type="radio" id="low" name="priority" value="Basse">
+									<input required type="radio" id="low" name="priority" value="Basse">
 									<label for="low">Basse</label>
 								</span>
 
 								<span class="radiobadge">
-									<input type="radio" id="med" name="priority" value="Moyenne" checked="checked">
+									<input required type="radio" id="med" name="priority" value="Moyenne" checked="checked">
 									<label for="med">Moyenne</label>
 								</span>
 
 								<span class="radiobadge">
-									<input type="radio" id="high" name="priority" value="Haute">
+									<input required type="radio" id="high" name="priority" value="Haute">
 									<label for="high">Haute</label>
 								</span>
 							</section>
@@ -310,8 +310,8 @@
 
 
 					<section id="buttons">
-						<input type="reset" name="reset" id="resetbtn" class="resetbtn" value="Remettre à Zéro">
-						<input type="submit" name="submit" id="submitbtn" class="submitbtn" tabindex="7" value="Envoyer tous les articles">
+						<input required type="reset" name="reset" id="resetbtn" class="resetbtn" value="Remettre à Zéro">
+						<input required type="submit" name="submit" id="submitbtn" class="submitbtn" tabindex="7" value="Envoyer tous les articles">
 						<br style="clear:both;">
 					</section>
 				</form>
@@ -322,15 +322,15 @@
 				<form name="hongkiat" id="hongkiat-form" method="post">
 					<div id="wrapping" class="clearfix">
 						<section id="aligned">
-							<input type="text" name="name" id="name" placeholder="Publié par.. (traçabilité)" autocomplete="off" tabindex="1" class="txtinput">
+							<input required type="text" name="name" id="name" placeholder="Publié par.. (traçabilité)" autocomplete="off" tabindex="1" class="txtinput">
 
-							<input type="text" name="email" id="email" placeholder="Titre de l'article" autocomplete="off" tabindex="2" class="txtinput nl-title">
+							<input required type="text" name="email" id="email" placeholder="Titre de l'article" autocomplete="off" tabindex="2" class="txtinput nl-title">
 
-							<input type="url" name="link" id="website" placeholder="URL de l'article" autocomplete="off" tabindex="3" class="txtinput nl-url">
+							<input required type="url" name="link" id="website" placeholder="URL de l'article" autocomplete="off" tabindex="3" class="txtinput nl-url">
 
 							<label>Couverture de l'article</label>
 
-							<input   type="file" name="image" placeholder="Couverture de l'article" tabindex="4" class="txtinput file-trigger">
+							<input required   type="file" name="image" placeholder="Couverture de l'article" tabindex="4" class="txtinput file-trigger">
 
 							<img style="display:none;" class="nl-image-preview" />
 
@@ -351,17 +351,17 @@
 							<section id="prioritycase">
 								<h3>Priorité:</h3>
 								<span class="radiobadge">
-									<input type="radio" id="low" name="priority" value="Basse">
+									<input required type="radio" id="low" name="priority" value="Basse">
 									<label for="low">Basse</label>
 								</span>
 
 								<span class="radiobadge">
-									<input type="radio" id="med" name="priority" value="Moyenne" checked="checked">
+									<input required type="radio" id="med" name="priority" value="Moyenne" checked="checked">
 									<label for="med">Moyenne</label>
 								</span>
 
 								<span class="radiobadge">
-									<input type="radio" id="high" name="priority" value="Haute">
+									<input required type="radio" id="high" name="priority" value="Haute">
 									<label for="high">Haute</label>
 								</span>
 							</section>
@@ -370,8 +370,8 @@
 
 
 					<section id="buttons">
-						<input type="reset" name="reset" id="resetbtn" class="resetbtn" value="Remettre à Zéro">
-						<input type="submit" name="submit" id="submitbtn" class="submitbtn" tabindex="7" value="Envoyer tous les articles">
+						<input required type="reset" name="reset" id="resetbtn" class="resetbtn" value="Remettre à Zéro">
+						<input required type="submit" name="submit" id="submitbtn" class="submitbtn" tabindex="7" value="Envoyer tous les articles">
 						<br style="clear:both;">
 					</section>
 				</form>
@@ -382,15 +382,15 @@
 				<form name="hongkiat" id="hongkiat-form" method="post">
 					<div id="wrapping" class="clearfix">
 						<section id="aligned">
-							<input type="text" name="name" id="name" placeholder="Publié par.. (traçabilité)" autocomplete="off" tabindex="1" class="txtinput">
+							<input required type="text" name="name" id="name" placeholder="Publié par.. (traçabilité)" autocomplete="off" tabindex="1" class="txtinput">
 
-							<input type="text" name="email" id="email" placeholder="Titre de l'article" autocomplete="off" tabindex="2" class="txtinput nl-title">
+							<input required type="text" name="email" id="email" placeholder="Titre de l'article" autocomplete="off" tabindex="2" class="txtinput nl-title">
 
-							<input type="url" name="link" id="website" placeholder="URL de l'article" autocomplete="off" tabindex="3" class="txtinput nl-url">
+							<input required type="url" name="link" id="website" placeholder="URL de l'article" autocomplete="off" tabindex="3" class="txtinput nl-url">
 
 							<label>Couverture de l'article</label>
 
-							<input   type="file" name="image" placeholder="Couverture de l'article" tabindex="4" class="txtinput file-trigger">
+							<input required   type="file" name="image" placeholder="Couverture de l'article" tabindex="4" class="txtinput file-trigger">
 
 							<img style="display:none;" class="nl-image-preview" />
 
@@ -411,17 +411,17 @@
 							<section id="prioritycase">
 								<h3>Priorité:</h3>
 								<span class="radiobadge">
-									<input type="radio" id="low" name="priority" value="Basse">
+									<input required type="radio" id="low" name="priority" value="Basse">
 									<label for="low">Basse</label>
 								</span>
 
 								<span class="radiobadge">
-									<input type="radio" id="med" name="priority" value="Moyenne" checked="checked">
+									<input required type="radio" id="med" name="priority" value="Moyenne" checked="checked">
 									<label for="med">Moyenne</label>
 								</span>
 
 								<span class="radiobadge">
-									<input type="radio" id="high" name="priority" value="Haute">
+									<input required type="radio" id="high" name="priority" value="Haute">
 									<label for="high">Haute</label>
 								</span>
 							</section>
@@ -430,8 +430,8 @@
 
 
 					<section id="buttons">
-						<input type="reset" name="reset" id="resetbtn" class="resetbtn" value="Remettre à Zéro">
-						<input type="submit" name="submit" id="submitbtn" class="submitbtn" tabindex="7" value="Envoyer tous les articles">
+						<input required type="reset" name="reset" id="resetbtn" class="resetbtn" value="Remettre à Zéro">
+						<input required type="submit" name="submit" id="submitbtn" class="submitbtn" tabindex="7" value="Envoyer tous les articles">
 						<br style="clear:both;">
 					</section>
 				</form>
@@ -442,15 +442,15 @@
 				<form name="hongkiat" id="hongkiat-form" method="post">
 					<div id="wrapping" class="clearfix">
 						<section id="aligned">
-							<input type="text" name="name" id="name" placeholder="Publié par.. (traçabilité)" autocomplete="off" tabindex="1" class="txtinput">
+							<input required type="text" name="name" id="name" placeholder="Publié par.. (traçabilité)" autocomplete="off" tabindex="1" class="txtinput">
 
-							<input type="text" name="email" id="email" placeholder="Titre de l'article" autocomplete="off" tabindex="2" class="txtinput nl-title">
+							<input required type="text" name="email" id="email" placeholder="Titre de l'article" autocomplete="off" tabindex="2" class="txtinput nl-title">
 
-							<input type="url" name="link" id="website" placeholder="URL de l'article" autocomplete="off" tabindex="3" class="txtinput nl-url">
+							<input required type="url" name="link" id="website" placeholder="URL de l'article" autocomplete="off" tabindex="3" class="txtinput nl-url">
 
 							<label>Couverture de l'article</label>
 
-							<input   type="file" name="image" placeholder="Couverture de l'article" tabindex="4" class="txtinput file-trigger">
+							<input required   type="file" name="image" placeholder="Couverture de l'article" tabindex="4" class="txtinput file-trigger">
 
 							<img style="display:none;" class="nl-image-preview" />
 
@@ -471,17 +471,17 @@
 							<section id="prioritycase">
 								<h3>Priorité:</h3>
 								<span class="radiobadge">
-									<input type="radio" id="low" name="priority" value="Basse">
+									<input required type="radio" id="low" name="priority" value="Basse">
 									<label for="low">Basse</label>
 								</span>
 
 								<span class="radiobadge">
-									<input type="radio" id="med" name="priority" value="Moyenne" checked="checked">
+									<input required type="radio" id="med" name="priority" value="Moyenne" checked="checked">
 									<label for="med">Moyenne</label>
 								</span>
 
 								<span class="radiobadge">
-									<input type="radio" id="high" name="priority" value="Haute">
+									<input required type="radio" id="high" name="priority" value="Haute">
 									<label for="high">Haute</label>
 								</span>
 							</section>
@@ -490,8 +490,8 @@
 
 
 					<section id="buttons">
-						<input type="reset" name="reset" id="resetbtn" class="resetbtn" value="Remettre à Zéro">
-						<input type="submit" name="submit" id="submitbtn" class="submitbtn" tabindex="7" value="Envoyer tous les articles">
+						<input required type="reset" name="reset" id="resetbtn" class="resetbtn" value="Remettre à Zéro">
+						<input required type="submit" name="submit" id="submitbtn" class="submitbtn" tabindex="7" value="Envoyer tous les articles">
 						<br style="clear:both;">
 					</section>
 				</form>
